--- a/changelog
+++ b/changelog
@@ -1,2 +1,9 @@
-0.1.0
+0.0.1
     ベータリリース
+0.2.0
+    D&D対応
+    一部のUIの選択しないように変更
+    共有ボタンの追加
+    ページ離脱時の確認画面が出るように
+    キャッシュのリロードの改良
+    ダークモードでの色味修正
