--- a/changelog
+++ b/changelog
@@ -7,3 +7,9 @@
     ページ離脱時の確認画面が出るように
     キャッシュのリロードの改良
     ダークモードでの色味修正
+0.3.0
+    狭小幅でのUIの崩れる問題の修正
+    ページロードの改善
+    PWA最適化(Maskable)
+    PC(横画面)向け共有機能の廃止
+    内部最適化
